--- a/store/templates/login.html
+++ b/store/templates/login.html
@@ -4,14 +4,14 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<div class=" flex items-center justify-center  py-8 px-4 sm:px-6 lg:px-8 rounded-xl">
+<div class=" flex items-center justify-center  py-8 px-4 sm:px-6 lg:px-8 rounded-xl mt-4">
     <div class="max-w-md w-full space-y-8 bg-white p-10 rounded-xl shadow-2xl">
         <div>
             <img class="mx-auto h-48 w-auto" src="{% static 'images/logo.jpg' %}" alt="Logo">
-            <h2 class="mt-6 text-center text-xl font-extrabold text-green-600">
-                NOHD PHARMACY INVENTORY MANAGEMENT
+            <h2 class="mt-3 text-center text-sm font-extrabold text-green-600 ">
+                NOHD PHARMACY INVENTORY MANAGEMENT SOFTWARE
             </h2>
-            <p class="mt-2 text-center text-sm text-gray-600">
+            <p class="mt-3 text-center text-xs text-gray-600 uppercase border-t-2 border-zinc-200">
                 Sign in to your account
             </p>
         </div>
