--- a/store/templates/store/item_pdf.html
+++ b/store/templates/store/item_pdf.html
@@ -8,7 +8,7 @@
     <style>
 @page{
     margin: 0.8cm;
-    border: 1px solid green;
+    border: 1px solid  rgb(5, 104, 104);;
     padding: 0.1cm;
 }
 /* Table styles */
@@ -20,7 +20,7 @@ table {
 
  td {
     border: 0.1px solid #ddd; /* Adjust the color as needed */
-    padding: 5px; /* Adjust the padding as needed */
+    padding: 6px; /* Adjust the padding as needed */
     word-wrap: break-word; /* Allow text to wrap */
     overflow: hidden; /* Add this line to prevent overflow */
     text-overflow: ellipsis; /* Add this line to display ellipsis (...) for truncated text */
@@ -29,7 +29,7 @@ table {
 
 /* Table header cell styles */
 th {
-    background-color: #057f1e;
+    background-color: rgb(5, 104, 104);
     color: #fff; 
     padding: 2px;
 }
@@ -61,9 +61,6 @@ th {
     padding: 0.05rem;
 }
 
-.border-cyan-900 {
-    border: 1px solid #565d59; /* Adjust the color as needed */
-}
 
 .text-xs {
     font-size: 1rem;
@@ -113,7 +110,7 @@ th {
         .queryset-data {
             margin-top: 2px;
             text-align: center;
-            color: #039a10;
+            color:  rgb(5, 104, 104);
             text-align: center;
 
         }
