--- a/store/templates/store/items_list.html
+++ b/store/templates/store/items_list.html
@@ -5,7 +5,7 @@
 {% block title %}Drugs Inventory{% endblock %}
 {% block content %}
 <div class="mx-1">
-    <h1 class="text-lg font-bold text-gray-900 text-center">Drug Inventory</h1>
+    <h1 class="text-lg font-bold text-cyan-800 text-center uppercase">Drug Inventory</h1>
     <div class="flex justify-center items-center m-2 space-x-2">
         <a href="{% url 'create_drug' %}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">
           <i class="fas fa-plus mr-2"></i> Add Drug
@@ -52,7 +52,7 @@
         </form>
       </div>
     <div class="bg-white shadow overflow-hidden sm:rounded-lg">
-        <div class="overflow-x-auto max-h-[70vh]">
+        <div class="overflow-x-auto max-h-[65vh]">
             <table class="min-w-full divide-y divide-gray-200">
                 <thead class="bg-cyan-400">
                     <tr class="text-xs text-center">
@@ -76,13 +76,13 @@
                     {% for i in po %}
                     <tr class="{% cycle 'bg-white' 'bg-cyan-50' %} text-xs text-center">
                         <td class="p-3 whitespace-nowrap  text-gray-500">{{ forloop.counter }}</td>
-                        <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.supply_date|default_if_none:'N/A' }}<br> <small> added by: <br> {{ i.added_by }}</small></td>
+                        <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.supply_date|default_if_none:'N/A' }}<br> <small> added by: <br> {{ i.added_by|upper }}</small></td>
                         <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.category|default_if_none:'N/A' }}</td>
-                        <td class="p-3 whitespace-nowrap  font-medium text-gray-900">{{ i.generic_name|default_if_none:'N/A' }}</td>
-                        <td class="p-3 whitespace-nowrap  font-medium text-gray-900">{{ i.name|default_if_none:'N/A' }}</td>
-                        <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.brand_name|default_if_none:'N/A' }}<br> <small>{{ i.supplier|default_if_none:'N/A' }} </small></td>
+                        <td class="p-3 whitespace-nowrap  font-medium text-gray-900">{{ i.generic_name|default_if_none:'N/A'|upper }}</td>
+                        <td class="p-3 whitespace-nowrap  font-medium text-gray-900">{{ i.name|default_if_none:'N/A'|upper }}</td>
+                        <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.brand_name|default_if_none:'N/A'|upper }}<br> <small>{{ i.supplier|default_if_none:'N/A'|upper }} </small></td>
                         <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.dosage_form|default_if_none:'N/A' }}</td>
-                        <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.pack_size|default_if_none:'N/A' }}</td>
+                        <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.pack_size|default_if_none:'N/A'|upper }}</td>
                         <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.cost_price|default_if_none:'N/A' }}</td>
                         <td class="p-3 whitespace-nowrap  text-gray-500">{{ i.total_purchased_quantity|default_if_none:'N/A' }}</td>
                         <td class="p-3 whitespace-nowrap  text-gray-500">{%if i.current_balance <= 0 %} <span class="text-rose-700 font-semibold">O/S</span>{%else%}{{ i.current_balance|default_if_none:'O/S' }}{%endif%}</td>
@@ -99,7 +99,7 @@
                                 <span class="text-gray-500">N/A</span>
                             {% endif %}
                         </td>
-                        <td class="p-3 whitespace-nowrap text-sm text-gray-500 text-center"><a href="{% url 'update_drug' i.id %}"><i class="fa fa-solid fa-edit fa-xl text-cyan-700"></i></a></td>
+                        <td class="p-3 whitespace-nowrap text-gray-500 text-center"><a href="{% url 'update_drug' i.id %}"><i class="fa fa-solid fa-edit fa-lg text-cyan-700"></i></a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
