--- a/store/templates/store/update_record.html
+++ b/store/templates/store/update_record.html
@@ -5,7 +5,7 @@
     <div class="max-w-6xl mx-auto">
         <div class="bg-amber-100 shadow-xl rounded-lg overflow-hidden">
             <div class="bg-amber-600 px-4 py-4">
-                <h2 class="text-lg font-bold text-white text-center uppercase">Update Drug Restock</h2>
+                <h2 class="text-sm font-bold text-white text-center uppercase">Update Drug Restock</h2>
             </div>
             <form id="recordForm" action="" method="POST" enctype="multipart/form-data" class="p-6 text-xs">
                 {% csrf_token %}
