--- a/store/templates/store/update_restock.html
+++ b/store/templates/store/update_restock.html
@@ -5,7 +5,7 @@
     <div class="max-w-4xl mx-auto">
         <div class="bg-blue-100 shadow-xl rounded-lg overflow-hidden">
             <div class="bg-blue-600 px-4 py-4">
-                <h2 class="text-lg font-bold text-white text-center uppercase">Update Drug Restock</h2>
+                <h2 class="text-sm font-bold text-white text-center uppercase">Update Drug Restock</h2>
             </div>
             <form id="recordForm" action="" method="POST" enctype="multipart/form-data" class="p-6 text-xs">
                 {% csrf_token %}
@@ -14,7 +14,7 @@
                     {{ form.non_field_errors.0 }}
                 </div>
                 {% endif %}
-                <div class="grid grid-cols-1 gap-1 md:grid-cols-4">
+                <div class="grid grid-cols-1 gap-1 md:grid-cols-4 text-xs"  >
                     <div class="space-y-1">
                         <label class="block text-sm font-medium text-gray-700">Class</label>
                         <div class="mt-1">
@@ -26,7 +26,7 @@
                     </div>
                     <div class="space-y-1">
                         <label class="text-sm font-medium text-gray-700">Drug</label>
-                        <div class="mt-1">
+                        <div class="mt-1 text-xs"   >
                             {{ form.drug }}
                         </div>
                         {% if form.drug.errors %}
