--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -8,11 +8,11 @@
             <div class="md:flex-shrink-0 bg-green-500 md:w-1/3 flex items-center justify-center p-12">
                 <i class="fa fa-solid fa-prescription text-9xl text-white"></i>
             </div>
-            <div class="p-8 md:p-16 md:w-2/3">
-                <div class="uppercase tracking-wide text-center text-2xl md:text-4xl  text-green-600 mb-2">
+            <div class="p-4 md:p-16 md:w-2/3">
+                <div class="uppercase tracking-wide text-center text-3xl  text-green-600 mb-2">
                     NOHD Pharmacy Store
                 </div>
-                <p class="text-gray-700 text-lg mb-12 text-center border-t-2 border-zinc-200">
+                <p class="text-gray-700 text-sm mb-12 text-center border-t-2 border-zinc-200">
                     Inventory Management System
                 </p>
                 <div class="grid md:grid-cols-2 gap-4 text-xs uppercase ">
