--- a/store/templates/login.html
+++ b/store/templates/login.html
@@ -8,16 +8,16 @@
     <div class="max-w-md w-full space-y-8 bg-white p-10 rounded-xl shadow-2xl">
         <div>
             <img class="mx-auto h-48 w-auto" src="{% static 'images/logo.jpg' %}" alt="Logo">
-            <h2 class="mt-3 text-center text-sm font-extrabold text-green-600 ">
-                NOHD PHARMACY INVENTORY MANAGEMENT SOFTWARE
+            <h2 class="mt-3 text-center text-sm font-extrabold text-green-600">
+                NOHD PHARMACY STORE INVENTORY MANAGEMENT SOFTWARE
             </h2>
-            <p class="mt-3 text-center text-xs text-gray-600 uppercase border-t-2 border-zinc-200">
+            <p class="mt-3 text-center text-xs text-gray-600 uppercase border-b-2 border-zinc-200">
                 Sign in to your account
             </p>
         </div>
 
         {% if messages %}
-            <div class="rounded-md bg-yellow-50 p-4">
+            <div class="rounded-md bg-yellow-50 p-2">
                 <div class="flex">
                     <div class="flex-shrink-0">
                         <i class="fas fa-exclamation-triangle text-yellow-400"></i>
@@ -56,7 +56,7 @@
             </div>
         {% endif %}
 
-        <form class="mt-8 space-y-4" action="" method="POST">
+        <form class="mt-6 space-y-4" action="" method="POST">
             {% csrf_token %}
             <div class="rounded-md shadow-sm -space-y-px">
                 <div>
