--- a/store/templates/store/item_report.html
+++ b/store/templates/store/item_report.html
@@ -10,10 +10,10 @@
     <div class="flex justify-end items-center m-2 space-x-2">
     {% if request.GET.urlencode %}
     <div class="flex justify-center gap-2 mb-4">
-        <a href="{% url 'drug_pdf' %}?{{ request.GET.urlencode }}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">
+        <a href="{% url 'drug_pdf' %}?{{ request.GET.urlencode }}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-rose-600 hover:bg-rose-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-rose-500">
             <i class="fas fa-file-pdf mr-2"></i> Generate PDF
         </a>
-        <a href="?" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">
+        <a href="?" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-yellow-600 hover:bg-yellow-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-500">
             <i class="fas fa-rotate mr-2"></i> Reset
         </a>
     </div>
