--- a/store/templates/store/record_pdf.html
+++ b/store/templates/store/record_pdf.html
@@ -107,8 +107,8 @@ h1 {
             width: 40px;
         }
         .t{
-            font-style: italic;
-            font-size: 8px;
+            font-style: bold;
+            font-size: 10px;
         }
         .rose{
          color: red;   
@@ -138,7 +138,7 @@ h1 {
                 <th class="small-column">#</th>
                 <th class="">DATE ISSUED</th>
                 <th class="">DRUG INFO</th>
-                <th class="">BRAND</th>
+                <th class="">TRADE NAME</th>
                 <th class="">SUPPLIER</th>
                 <th class="">UNIT ISSUED TO</th>
                 <th class="sn">QTY ISSUED</th>
@@ -156,11 +156,11 @@ h1 {
                 </small>
             </td>    
             <td>
-                {{r.drug|default_if_none:''|upper}} <br>
-               <small class="t">{{r.drug.generic_name|default_if_none:''|upper}}</small> 
+                {{r.drug.generic_name|default_if_none:''|upper}} <br>
+               <small class="t">{{r.drug.strength|default_if_none:''|upper}}</small> 
             </td>
             <td>
-                {{r.drug.brand_name|default_if_none:''|upper}}
+                {{r.drug.trade_name|default_if_none:''|upper}}
             </td>
             <td>
                    {{r.drug.supplier|default_if_none:''|upper}}
